<resources>
    <string name="app_name">lab8</string>
    <string name="but_NEW">Новая</string>
    <string name="but_EDIT">Редакт.</string>
    <string name="but_DELETE">Удалить</string>
    <string name="TxtViewTitle">Заголовок</string>
    <string name="TxtViewContent">Содержание</string>
    <string name="EditContent" />
    <string name="EditTitle" />
    <string name="butCANCEL">Отмена</string>
    <string name="butOK">Создать</string>
</resources>