<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_ok_click"
            android:text="@string/butOK"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnCANCEL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_cancel_click"
            android:text="@string/butCANCEL"
            android:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTITLE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TxtViewTitle" />

    <EditText
        android:id="@+id/TxtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:text="@string/EditTitle" />

    <TextView
        android:id="@+id/textViewCONTENT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TxtViewContent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/TxtContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="@string/EditContent" />
    </ScrollView>

</LinearLayout>