<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/debugSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Выбрано: -//-" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_new_click"
            android:text="@string/but_NEW"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_edit_click"
            android:text="@string/but_EDIT"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="on_delete_click"
            android:text="@string/but_DELETE"
            android:visibility="gone" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>